downloads/index.htrw this way it actually does it for the download page
2007-07-11  Jakub Steiner <jimmac@ximian.com>

* downloads/index.htrw
* includes/wgo.js: this way it actually does it for the download
page only.

svn path=/branches/v2.4/; revision=1530

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-07-11  Jakub Steiner <jimmac@ximian.com>
 
+	* downloads/index.htrw
+	* includes/wgo.js: this way it actually does it for the download
+		page only.
+
+2007-07-11  Jakub Steiner <jimmac@ximian.com>
+
 	* downloads/Mac.xhtml: add a note about Fink and Macports
 	* downloads/source.xhtml: no .gz tarballs anymore I'm told.
 	* images/bullet.png:
