about/splash/stable.html few more tweaks
2007-07-12  Jakub Steiner <jimmac@ximian.com>

* about/splash/stable.html
* style/wgo.css: few more tweaks

svn path=/branches/v2.4/; revision=1532

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-12  Jakub Steiner <jimmac@ximian.com>
+
+	* about/splash/stable.html
+	* style/wgo.css: few more tweaks
+
 2007-07-11  Jakub Steiner <jimmac@ximian.com>
 
 	* screenshots/windows_crop.png
