OSX screenshot. COurtesy of Axel Wernicke.
2007-07-23  Jakub Steiner <jimmac@ximian.com>

* screenshots/osx_aperture.jpg:
* screenshots/osx_aperture_thumb.jpg:
* screenshots/index.htrw: OSX screenshot. COurtesy of Axel Wernicke.

svn path=/branches/v2.4/; revision=1535

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-23  Jakub Steiner <jimmac@ximian.com>
+
+	* screenshots/osx_aperture.jpg:
+	* screenshots/osx_aperture_thumb.jpg:
+	* screenshots/index.htrw: OSX screenshot. Courtesy of Axel Wernicke.
+
 2007-07-12  Jakub Steiner <jimmac@ximian.com>
 
 	* about/splash/stable.html
