sort the list descending get rid of table border
2007-07-24  Jakub Steiner <jimmac@ximian.com>

* about/splash/index.htrw: sort the list descending 
* style/wgo.css: get rid of table border

svn path=/branches/v2.4/; revision=1537

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-24  Jakub Steiner <jimmac@ximian.com>
+
+	* about/splash/index.htrw: sort the list descending 
+	* style/wgo.css: get rid of table border
+
 2007-07-23  Jakub Steiner <jimmac@ximian.com>
 
 	* screenshots/osx_aperture.jpg:
