added fixes to set the width of the container. Problems occure for IE6
2007-08-02  Roman Joost  <romanofski@gimp.org>

	* style/ie-nastiness.css: added fixes to set the width of the
	container. Problems occure for IE6 with the width of the menu.

svn path=/branches/v2.4/; revision=1545

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-08-02  Roman Joost  <romanofski@gimp.org>
 
+	* style/ie-nastiness.css: added fixes to set the width of the
+	container. Problems occure for IE6 with the width of the menu.
+
+2007-08-02  Roman Joost  <romanofski@gimp.org>
+
 	* includes/imagebox.js: fixed bug of horizontal scrollbar
 	which is displayed during viewing of screenshots. The
 	ImageBoxOverlay calculates the width a bit too wide. Now it is
