--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-09-04  Jakub Steiner <jimmac@ximian.com>
 
+	* screenshots/index.htrw: remove confusing instructions.
+
+2007-09-04  Jakub Steiner <jimmac@ximian.com>
+
 	* includes/imagebox.js: disable opacity fades of the overlay,
 	addressing the speed issues Akkana has with this. Not as nice
 	looking though.
