we have to have an easter egg, right?
2007-09-06  Jakub Steiner <jimmac@ximian.com>

* <censored>: we have to have an easter egg, right?

svn path=/branches/v2.4/; revision=1575

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-09-06  Jakub Steiner <jimmac@ximian.com>
 
+	* <censored>: we have to have an easter egg, right?
+
+2007-09-06  Jakub Steiner <jimmac@ximian.com>
+
 	* style/wgo.css: make some room for the splash author's name.
 
 2007-09-05  Jakub Steiner <jimmac@ximian.com>
