--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-06  Raphaël Quinet  <raphael@gimp.org>
+
+	* includes/wgo.js: fixed an old typo: </diov> should be </div>.
+
 2007-09-06  Jakub Steiner <jimmac@ximian.com>
 
 	* <censored>: we have to have an easter egg, right?
