--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-13  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.4.htrw: updated text, fixed some typos.
+
 2007-09-12  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/gimp-2.4.htrw
